--- a/styles/components/home.module.css
+++ b/styles/components/home.module.css
@@ -43,6 +43,56 @@
   z-index: 0;
 }
 
+.aboutSection {
+  background: #111;
+  padding: 4rem 1.5rem;
+  color: #ddd;
+  border-top: 1px solid #222;
+  border-bottom: 1px solid #222;
+  font-family: var(--font-cinzel);
+}
+
+.aboutContainer {
+  max-width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.aboutTitle {
+  font-size: 2.25rem;
+  font-family: var(--font-cinzel);
+  color: #ddd;
+  margin-bottom: 2rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.aboutTitle::after {
+  content: '';
+  display: block;
+  width: 40%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
+
+.aboutText {
+  font-size: 1.1rem;
+  line-height: 1.8;
+  margin-bottom: 1.5rem;
+  color: #ccc;
+  
+}
+
+.aboutText strong {
+  color: #fff;
+}
+
+.aboutCTA {
+  margin-top: 2.5rem;
+}
 
 
 .content {
@@ -55,12 +105,13 @@
   justify-content: center; 
   align-items: center;  
   text-align: center;
-  color: #fff;             
+  color: #fff; 
+  font-family: var(--font-cinzel);            
 }
   
   .main h1 {
     font-size: 3rem;
-    margin-bottom: 0rem;
+    margin-bottom: 1rem;
     font-family: var(--font-cinzel); 
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -72,7 +123,7 @@
     color: white;
     margin-top: 0rem;
     margin-bottom: 2rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   
 
@@ -84,12 +135,13 @@
     justify-content: space-between !important;
     position: relative !important;
     height: 75vh;
+    align-items: center;
   }
 
   /* Enforce a 16:9 container for the video */
   .videoCropper {
     position: relative;
-    height: 100%;
+    height: 200%;
     aspect-ratio: 16 / 9;
     overflow: hidden;
   }
@@ -110,13 +162,12 @@
     position: relative;
     order: 2;
     padding: 2rem 1rem;       /* more breathing room */
-    margin-bottom: 1.5rem;    /* separate from swipe-up */
     text-align: center;
     margin-top: -2rem;
   }
   .main h1{
-    margin-bottom: 1.5rem;   /* space below title */
-    font-size: 1.5rem;
+    margin-bottom: 0.5rem;   /* space below title */
+    font-size: 1.8rem;
   }
   .main p {
     font-size: 1rem;
@@ -132,6 +183,18 @@
   .slideUp {
     animation: slideUpAnim 0.6s ease-in-out forwards;
   }
+
+  .aboutTitle {
+  font-size: 1.8rem;
+}
+
+.aboutText {
+  font-size: 1rem;
+  line-height: 1.8;
+  margin-bottom: 1.5rem;
+  color: #ccc;
+  
+}
 }
 
 
