--- a/styles/components/gym.module.css
+++ b/styles/components/gym.module.css
@@ -186,7 +186,7 @@
   .ctaButton {
     background-color: #e53e3e;
     color: #fff;
-    padding: 0.75rem 1.5rem;
+    padding: 1rem 2.5rem;
     border-radius: 0.25rem;
     text-decoration: none;
     font-weight: 500;
@@ -233,6 +233,12 @@
   transition: color 0.2s ease;
 }
 
+
+.ctaWrapper{
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
 .closeButton:hover {
   color: #ed1c28; /* accent on hover */
 }
