--- a/styles/components/fightnight.module.css
+++ b/styles/components/fightnight.module.css
@@ -34,10 +34,16 @@
   color: #fff;
 }
   .heroTitle {
+    margin-top: 15rem;
     font-size: 2.5rem;
     font-weight: initial;
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
     text-align: center;
+    font-weight: 800;
+    text-shadow:
+    0 2px 8px rgba(0,0,0,0.85),  
+    0 0 1px #ed1c28,                
+    0 1px 2px #111;
   }
   
   .heroDate {
@@ -66,9 +72,20 @@
     padding: 2rem;
     font-family: var(--font-cinzel);
   }
+
+  .heroOverlay p {
+    color: #ed1c28;
+    font-size: 1.4rem;
+    font-weight: 300;
+    text-shadow:
+    0 2px 8px rgba(0,0,0,0.85),  
+    0 0 1px #ed1c28,                
+    0 1px 2px #111;
+  }
+
   
   /* Upcoming Events */
-  .upcomingEvents {
+  .upcomingEvents, .eventHighlights {
     margin-bottom: 0rem !important;
   }
   .upcomingEvents h2 {
@@ -139,7 +156,7 @@
   overflow-x: auto;
   overflow-y: visible;
   gap: 1.5rem;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
   flex: 1;   
           
 }
@@ -302,18 +319,17 @@
   padding: 0 1rem;                              
   color: #fff;
 }
-.carouselContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 1rem;
-  height: 700px;
+.eventsCarouselContainer{
+  margin-bottom: 6rem;
+  margin-top: 3rem;
 }
+
 .heroTitle {
   font-size: 2rem;
-  font-weight: normal;
-  margin-bottom: 1rem;
+  font-weight: 700;
   text-align: center;
+  
+
 }
 .heroDate {
   font-size: 1.25rem;
@@ -328,6 +344,7 @@
 
   .mainContent {
     padding: 1rem;
+    height: 1400px;
   }
 
   /* force a single column */
@@ -356,17 +373,12 @@
   .eventsCarouselContainer .arrowButton {
     display: none;
   }
-  .eventHighlights {
-  margin-top: -2rem;
-  margin-bottom: 2rem;
-
-}
+ 
 .eventHighlights h2{
-  margin-bottom: 0.8rem;
+  margin-bottom: -4rem;
+  margin-top: -3rem;
 }
-    .arrowButton {
-    display: none !important;
-  }
+
 
   /* Show pagination container */
   .pagination {
@@ -397,7 +409,23 @@
   }
   .eventCard,
   .videoCard {
-    flex: 0 0 100%;        /* fill the viewport */
-    scroll-snap-align: center;
+    flex: 0 0 100% !important;        /* fill the viewport */
+    scroll-snap-align: center !important;
   }
+}
+
+
+
+.eventCard,
+.videoCard {
+  transition: transform 0.3s cubic-bezier(0.39, 0.58, 0.57, 1), box-shadow 0.3s, border 0.3s;
+  /* add other transitions as needed */
+  z-index: 0;
+}
+
+.eventCard.active,
+.videoCard.active {
+  shadow: 0 0 24px #333;
+  transform: scale(1.04);
+  z-index: 2;
 }
