--- a/styles/components/gym.module.css
+++ b/styles/components/gym.module.css
@@ -51,13 +51,24 @@
     font-size: 2rem;
     margin-bottom: 1rem;
     text-align: center;
+    text-shadow:
+    0 2px 8px rgba(0,0,0,0.85),   /* big, soft dark shadow */
+    0 0 1px #fff,                  /* subtle white border */
+    0 1px 2px #111;             /* colored highlight */
   }
   
   .heroSubtitle {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     max-width: 600px;
+    font-weight: 400;
     text-align: center;
     margin-bottom: 1.5rem;
+    color: #ed1c28;
+    text-shadow:
+    0 2px 8px rgba(0,0,0,0.85),  
+    0 0 1px #ed1c28,                
+    0 1px 2px #111;
+
   }
   
   .heroButton {
@@ -432,12 +443,20 @@
   flex-direction: row-reverse;
 }
 
-.sectionImage {
+.sectionImage, .corncordiaSectionImage {
   width: 100%;
   max-width: 450px;
   border-radius: 1rem;
   object-fit: cover;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
+  transition: transform 0.25s cubic-bezier(.4,2,.6,1);
+}
+
+.corncordiaSectionImage:hover{
+  transform: scale(1.04);
+  /* Optional: box-shadow for more emphasis */
+  box-shadow: 0 8px 32px rgba(0,0,0,0.2);
+
 }
 
 .paragraph {
