--- a/styles/components/home.module.css
+++ b/styles/components/home.module.css
@@ -115,15 +115,25 @@
     font-family: var(--font-cinzel); 
     letter-spacing: 1px;
     text-transform: uppercase;
-    font-weight: 175;
+    font-weight: 550;
+    text-shadow:
+    0 2px 8px rgba(0,0,0,0.85),  
+    0 0 1px #fff,                
+    0 1px 2px #111;
+    
   }
   
   .main p {
-    max-width: 600px;
-    color: white;
+    max-width: 700px;
+    color: #ed1c28;
+    font-weight: 500;
     margin-top: 0rem;
     margin-bottom: 2rem;
     font-size: 1.3rem;
+    text-shadow:
+    0 2px 8px rgba(0,0,0,0.85),  
+    0 0 1px #ed1c28,                
+    0 1px 2px #111;
   }
   
 
