--- a/styles/components/sponsors.module.css
+++ b/styles/components/sponsors.module.css
@@ -14,11 +14,23 @@
   margin-bottom: 0.5rem;
 }
 
+.heading::after {
+  content: '';
+  display: block;
+  width: 40%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
+
 .subheading {
   max-width: 700px;
   margin: 0 auto 2rem;
-  color: #ed1c28;
+  color: #fff;
   font-size: 1.1rem;
+  
 }
 
 .sponsorGrid {
@@ -51,6 +63,16 @@
   margin-top: 4rem;
 }
 
+.sponsorsheading::after {
+  content: '';
+  display: block;
+  width: 20%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
 .logoWrapper {
   position: relative;
   width: 100%;
