--- a/styles/components/contact.module.css
+++ b/styles/components/contact.module.css
@@ -14,7 +14,16 @@
   margin-bottom: 0.5rem;
   color: white;
 }
-
+.heading::after {
+  content: '';
+  display: block;
+  width: 20%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
 .subtitle {
   text-align: center;
   max-width: 640px;
