--- a/styles/components/fightnight.module.css
+++ b/styles/components/fightnight.module.css
@@ -20,6 +20,17 @@
 
 }
 
+.eventHighlights h2::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
+
 .heroOverlay {
   position: absolute;
   top: 0;
@@ -93,6 +104,16 @@
     margin-bottom: 0rem;
     text-align: center;
   }
+  .upcomingEvents H2::after {
+  content: '';
+  display: block;
+  width: 20%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
 .eventsCarouselContainer .arrowButton {
   background: none;
   border: none;
