--- a/styles/components/modal.module.css
+++ b/styles/components/modal.module.css
@@ -296,9 +296,10 @@
   }
 
   .accomplishmentsWrapper {
-    width: 100%;
+    width: 85%;
     padding: 1rem;
     margin-bottom: 2.5rem !important;
+    margin-left: 1rem;
     
   }
 
