--- a/styles/components/team.module.css
+++ b/styles/components/team.module.css
@@ -74,6 +74,16 @@
     font-size: 1.75rem;
     margin-bottom: 2rem;
   }
+  .sectionTitle::after {
+  content: '';
+  display: block;
+  width: 10%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
   
   /* Team Grid */
  .teamGrid {
