--- a/styles/components/classes.module.css
+++ b/styles/components/classes.module.css
@@ -8,7 +8,7 @@
   
   .heading {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 0rem;
     font-size: 1.75rem;
   }
   
@@ -119,7 +119,17 @@
     width: 100%;
     max-width: 900px;
   }
+  .subheading {
+  max-width: 700px;
+  display: flex;
+  justify-self: center;
+  color: #ed1c28;
+  font-size: 1.3rem;
+  margin-bottom: 2rem;
+  text-align: center;
   
+  
+}
   .scheduleTable th,
   .scheduleTable td {
     border: 1px solid #444;
