--- a/styles/components/classes.module.css
+++ b/styles/components/classes.module.css
@@ -8,8 +8,14 @@
   
   .heading {
     text-align: center;
-    margin-bottom: 0rem;
+    margin-bottom: 2rem;
     font-size: 1.75rem;
+  }
+
+  .title{
+    text-align: center;
+    font-size: 1.75rem;
+
   }
   
   /* MEMBERSHIP PLANS */
