--- a/styles/components/fightnight.module.css
+++ b/styles/components/fightnight.module.css
@@ -340,9 +340,29 @@
   padding: 0 1rem;                              
   color: #fff;
 }
+.eventHighlights h2::after {
+  content: '';
+  display: block;
+  width: 40%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
 .eventsCarouselContainer{
   margin-bottom: 6rem;
   margin-top: 3rem;
+}
+.upcomingEvents H2::after {
+  content: '';
+  display: block;
+  width: 50%;
+  height: 3px;
+  background: #ed1c28;
+  /* background: #4650DC; */
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
 }
 
 .heroTitle {
