--- a/styles/components/foundation.module.css
+++ b/styles/components/foundation.module.css
@@ -29,7 +29,7 @@
   margin-top: 8rem;
 }
 .heroSubtitle {
-  color: #e53e3e; /* gold accent */
+  color: #ed1c28;
   font-size: 1.25rem;
   margin-top: 0.5rem;
 
