--- a/styles/components/team.module.css
+++ b/styles/components/team.module.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   height: 550px;          
-  background: url('/team_wide.jpg') no-repeat center;
+  background: url('/team1.jpeg') no-repeat center;
   background-size: cover;             
   font-family: var(--font-cinzel);
 }
@@ -20,7 +20,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0.3);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,7 +45,7 @@
   .heroSubtitle {
     font-size: clamp(1rem, 4vw, 1.2rem);
     max-width: 600px;
-    margin-bottom: 7rem;
+    margin-bottom: -6rem;
     text-align: center;
     color: #ed1c28;
     text-shadow:
