--- a/styles/components/team.module.css
+++ b/styles/components/team.module.css
@@ -2,8 +2,8 @@
 .heroSection {
   position: relative;
   width: 100%;
-  height: 550px;          
-  background: url('/team1.jpeg') no-repeat center;
+  height: 600px;          
+  background: url('/Team.jpeg') no-repeat center;
   background-size: cover;             
   font-family: var(--font-cinzel);
 }
@@ -32,10 +32,11 @@
   .heroTitle {
     font-size: clamp(1.5rem, 5vw, 2.5rem);
     text-align: center;
+    margin-top: 11rem;
 
-    margin-bottom: 0rem;
+    margin-bottom: 1rem;
     text-shadow:
-    0 2px 8px rgba(0,0,0,0.85),  
+    0 2px 8px rgba(0,0,0,0.9),  
     0 0 1px #fff,                
     0 1px 2px #111;
     
@@ -45,11 +46,12 @@
   .heroSubtitle {
     font-size: clamp(1rem, 4vw, 1.2rem);
     max-width: 600px;
-    margin-bottom: -6rem;
+    margin-top: 0rem;
+    margin-bottom: -9rem;
     text-align: center;
     color: #ed1c28;
     text-shadow:
-    0 2px 8px rgba(0,0,0,0.85),  
+    0 2px 8px rgba(0,0,0,0.9),  
     0 0 1px #ed1c28,                
     0 1px 2px #111;
     
@@ -226,6 +228,10 @@
   .heroSection {
     height: 350px;
     background-position: 50% 30%;
+  }
+
+  .heroTitle {
+    margin-top: 13rem;
   }
   .heroOverlay {
     padding: 0 1rem;
